--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: instagram_clone
+name: find_my_dog
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -54,6 +54,7 @@ dependencies:
 
 dev_dependencies:
   flutter_lints: ^2.0.0
+  change_app_package_name: ^1.0.0
   flutter_test:
     sdk: flutter
 
