--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "instagram_clone" "\0"
+            VALUE "FileDescription", "find_my_dog" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "instagram_clone" "\0"
+            VALUE "InternalName", "find_my_dog" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "instagram_clone.exe" "\0"
-            VALUE "ProductName", "instagram_clone" "\0"
+            VALUE "OriginalFilename", "find_my_dog.exe" "\0"
+            VALUE "ProductName", "find_my_dog" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
