--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   cloud_firestore: ^3.4.3
   cupertino_icons: ^1.0.2
+  custom_info_window: ^1.0.1
   firebase_auth: ^3.6.2
   firebase_core: ^1.20.0
   firebase_messaging: ^13.0.0
