--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -75,5 +75,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    api 'com.google.firebase:firebase-ml-model-interpreter:22.0.4'
     implementation platform('com.google.firebase:firebase-bom:30.3.1')
 }
