--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,8 +48,8 @@ android {
         applicationId "com.example.find_my_dog"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion 20
-        targetSdkVersion 22
+        minSdkVersion 21
+        targetSdkVersion 33
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         multiDexEnabled true
@@ -75,6 +75,7 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    api 'com.google.firebase:firebase-ml-model-interpreter:22.0.4'
+    implementation("com.android.support:multidex:1.0.3") // for multi-dex
     implementation platform('com.google.firebase:firebase-bom:30.3.1')
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
 }
