--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,30 +30,38 @@ dependencies:
   cloud_firestore: ^3.4.3
   cupertino_icons: ^1.0.2
   custom_info_window: ^1.0.1
+  dropdown_search: ^5.0.5
   firebase: ^9.0.3
   firebase_auth: ^3.6.2
   firebase_core: ^1.20.0
   firebase_messaging: ^13.0.0
-  firebase_ml_model_downloader: ^0.2.0
   firebase_storage: ^10.3.4
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.0.2
-  flutter_local_notifications: ^9.9.1
-  flutter_staggered_grid_view: 0.4.1
+  flutter_email_sender: ^5.2.0
+  flutter_launcher_icons: ^0.11.0
+  flutter_local_notifications: ^9.6.0
+  flutter_sms: ^2.3.3
+  flutter_staggered_grid_view: ^0.4.0
   flutter_svg: ^1.1.3
+  font_awesome_flutter: ^10.3.0
   geocoding: ^2.0.4
   geoflutterfire: ^3.0.2
   geolocator: ^9.0.1
   google_maps_flutter: ^2.1.12
+  google_ml_kit: ^0.6.0
   http: ^0.13.5
   image_picker: ^0.8.5+3
   intl: ^0.17.0
   liquid_swipe: ^3.0.0
   location: ^4.4.0
+  printing: ^5.9.3
   provider: ^6.0.3
+  screenshot: ^1.3.0
   smooth_page_indicator: ^1.0.0+2
   tflite: ^1.1.2
+  twilio_flutter: ^0.0.9
   url_launcher: ^6.1.6
   uuid: ^3.0.6
   what3words: ^3.1.0
@@ -63,6 +71,16 @@ dev_dependencies:
   change_app_package_name: ^1.0.0
   flutter_test:
     sdk: flutter
+
+dependency_overrides:
+  firebase_core_platform_interface: 4.5.1
+
+flutter_icons:
+ image_path: "assets/logo.png"
+ android: true
+ adaptive_icon_background: "#05AD05"
+ adaptive_icon_foreground: "assets/logo.png"
+ ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
